# DiegoMemoryManager

./: CMakeLists.txt  main.c
include/: dthreads.h  initializer.h  lists.h  main.h  pagefaulthandler.h  pfn.h  pte.h  reader.h  trimmer.h  util.h  writer.h
src/: dthreads.c  initializer.c  lists.c  main.c  pagefaulthandler.c  pfn.c  pte.c  reader.c  threads.c  trimmer.c  util.c  writer.c
